--- a/source/_posts/新媒体运营：我眼中的现实与迷茫.md
+++ b/source/_posts/新媒体运营：我眼中的现实与迷茫.md
@@ -6,7 +6,7 @@ tags:
   - 运营经验
 categories:
   - 职业观察
-cover: 'https://image.qqe4.com/Piclist/20250425002406747.png'
+cover: https://image.qqe4.com/Piclist/20250425112839724.png
 abbrlink: 5e32e1df
 date: 2025-04-24 20:00:00
 ---
